--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "hangman"
+    "url": "https://github.com/nclevine/hangman"
   },
   "author": "",
   "license": "ISC",
